# termcord

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: dev.yml  release.yml
src/: cli.rs  main.rs
